# wtg

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  errors.rs  lib.rs  main.rs  openai.rs  session.rs
