[package]
name = "wtg"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Chat with your program logs"
repository = "https://github.com/brylee10/wtg"
readme = "README.md"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
libc = "0.2.169"
nix = { version = "0.29.0", features = ["term", "process", "fs"] }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
signal-hook = "0.3.17"
thiserror = "2.0.11"
